--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,31 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+
+  </head>
+
+  <body>
+
+    <header class="header">
+    </header>
+
+    <section class="main-section">
+
+      <div class="main-left">
+      </div>
+      <div class="main-center">
+        <footer class="footer">
+        </footer>
+      </div>
+      <div class="main-right">
+      </div>
+
+    </section>
+
+
+  </body>
+</html>
